# supermops

./: README.md  example.py  pyproject.toml  requirements.txt  requirements_versions.txt  setup.py  sol.npy  tutorial.ipynb
article/experiments/noisy/adcg/: correct-adcg-t5.txt  params.py
article/experiments/noisy/redlin/: correct-gtids.txt  params.py
article/notebooks/: explore_article_eval.ipynb
article/plots/: loader.py  tex_utils.py  tikzheader.tex
article/plots/exact/: Makefile  exact.tex  gen_plot_data.py  main.tex  plot_data.json  write_tex.py
article/plots/grid/: Makefile  gen_plot_data.py  grid.tex  main.tex  plot_data.json  write_tex.py
article/plots/noisy/: Makefile  gen_plot_data.py  main.tex  noisy.tex  plot_data.json  write_tex.py
scripts/: collect_eval_v2.py  collect_separations.py  download_article_data.py  evaluate_v6.py  gen_ground_truth.py  gen_gt_double.py  gen_gt_single.py  gen_separation_distr.py  reconstruct_adcg_v2.jl  reconstruct_v7.py  reproduce_paper.py
supermops/: discretization.py  eval.py  generators.py  geometry.py  operators.py  plotting.py  projectors.py  sepdistr.py  transforms.py  utils.py
supermops/models/: __init__.py  abstract.py  dynamic.py  fourier.py
supermops/params/: params_v3.py
supermops/simulation/: generators.py  sepdistr.py
supermops/solvers/: __init__.py  cvxpy_solver.py  separable.py
supermops/spaces/: __init__.py  abstract.py  reducedlinear.py  strippable.py  variables.py
supermops/utils/: utils.py
supermops/visualization/: dimreduc.py  plot.py
(+18 files in other folders)
